hphp/test/zend/bad/ext-ldap/ldap_first_entry_error.php
<?php
require "connect.inc";

$link = ldap_connect($host, $port);
var_dump(ldap_first_entry($link));
var_dump(ldap_first_entry($link, $link, "Additional data"));
var_dump(ldap_first_entry($link, $link));
?>
===DONE===